# pandorica-libs

./: Cargo.toml  README.md  SECURITY.md
.github/workflows/: audit.yml  commitlint.yml  lint.yml  nightly-audit.yml  pr-audit.yml  pr-build.yml
crypto/: Cargo.toml
crypto/src/: argon2id.rs  chacha20poly1305.rs  lib.rs  traits.rs  xxhash3.rs
crypto/src/encryption/: chacha20poly1305.rs  mod.rs
crypto/src/hashing/: argon2id.rs  mod.rs
crypto/src/hsm/: config.rs  gcp.rs  mod.rs
crypto/src/key_derivation/: mod.rs  scrypt.rs
foreign/: Cargo.toml
foreign/src/: lib.rs
identifier/: Cargo.toml
identifier/src/: lib.rs
protobuf/: Cargo.toml  build.rs
protobuf/proto/: auth.proto  common.proto  file.proto  user.proto
protobuf/src/: lib.rs
shared/: Cargo.toml
shared/src/: error.rs
singleton/: Cargo.toml
singleton-derive/: Cargo.toml
singleton-derive/src/: lib.rs
singleton/src/: lib.rs
singleton/src/sync/: mod.rs
singleton/src/unsync/: mod.rs
