[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_core = { version="^0.6.4", features=["std"] }
argon2 = "^0.4.1"
scrypt = { version="^0.10.0", default-features=false }
chacha20poly1305 = { version="^0.10.1", features=["stream", "std"] }
gcloud-sdk = { version="^0.19.16", features=["google-cloud-kms-v1"] }
secret-vault-value = "^0.3.7"
once_cell = "^1.17.1"
tonic = "^0.8.3"
async-trait = "^0.1.66"
shared = { version = "^0.1.0", path = "../shared" }
singleton = { version = "^0.1.0", path = "../singleton" }