[package]
name = "crypto"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "^1.0.69"
argon2 = { version = "^0.5.0", features = ["std"] }
chacha20poly1305 = { version = "^0.10.1", features = ["stream", "std"] }
chrono = "^0.4.23"
gcloud-sdk = { version = "^0.19.16", features = ["google-cloud-kms-v1"] }
once_cell = "^1.17.1"
rand_core = { version = "^0.6.4", features = ["std"] }
secret-vault-value = "^0.3.7"
serde = { version = "1.0.153", features = ["derive"] }
shared = { version = "^0.1.0", path = "../shared" }
singleton = { version = "^0.1.0", path = "../singleton" }
tonic = "^0.8.3"
xxhash-rust = { version = "^0.8.6", features = ["xxh3"] }